<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TextView
        android:id="@+id/txt_view_host"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:text="@string/txt_view_host"
        android:textSize="25sp"
        />
    
    <EditText
        android:id="@+id/edt_txt_host"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/edt_txt_host_hint"
        android:paddingTop="15dp"
        android:layout_below="@id/txt_view_host"
		android:layout_marginTop="15dp"        
        />
    
    <TextView
        android:id="@+id/txt_view_table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_txt_host"
        android:paddingTop="25dp"
        android:text="@string/txt_view_table"
        android:textSize="25sp"
        />
    
    <EditText
        android:id="@+id/edt_txt_table_number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/edt_txt_table_hint"
        android:paddingTop="15dp"
        android:layout_below="@id/txt_view_table"
		android:layout_marginTop="15dp"
        />
    
    <Button
        android:id="@+id/btn_save_host"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_save_host"
        android:layout_below="@id/edt_txt_table_number"
        android:onClick="saveHost"
        android:layout_marginTop="15dp"
        />
    
</RelativeLayout>
