<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/trucha" 
        android:paddingTop="15dp"
        />      

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        >
    <Button
        android:id="@+id/btn_action_settings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_settings"
        android:onClick="startSettingsActivity"
        android:layout_weight="1"
        />
    
     <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_button"
		android:onClick="startMenu"
        android:layout_weight="1"
        />
     </LinearLayout>
          
</RelativeLayout>
