<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ShowDish" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         >
         
      <TextView
          android:id="@+id/txt_view_dish_name"
          android:layout_width="fill_parent"    
          android:layout_height="wrap_content"
          android:textSize="25sp"
          />
      
      <ImageView
        android:id="@+id/img_dish"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/logo_description"
        android:paddingTop="15dp"
        android:layout_below="@id/txt_view_dish_name"
        />
      
      <TextView 
          android:id="@+id/txt_view_description"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/img_dish"
          android:paddingTop="15dp"
          android:textSize="20sp"
          />
      
      <TextView
          android:id="@+id/txt_view_price"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/txt_view_description"
          android:paddingTop="15dp"
          android:textSize="20sp"
          />
      
      <LinearLayout 
          android:layout_below="@id/txt_view_price"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:paddingTop="15dp"
          >
          
          <Button
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/button_add_dish"
              android:layout_weight="1"
              android:onClick="addDishToOrder"
              />
          
          <Button
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/button_make_order"
              android:layout_weight="1"
              android:onClick="makeOrder" 
              />
          
      </LinearLayout>
        
      
	</RelativeLayout>
	
</ScrollView>
